spark update